aks/Ingress controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myappservice
spec:
  selector:
    app: ingress-deplomment
  ports:
  - port: 80
    targetPort: 80
